# HiddenTowerDefence

./: .env.example  .gcloudignore  .gitignore  Dockerfile  END_TO_END_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN.md  PLATFORM_DELIVERY_REMAINING_PLAN.md  PRODUCT_GAME_REMAINING_PLAN.md  README.md  pyproject.toml
.github/workflows/: deploy-prod.yml  domain-readiness.yml  rollback-prod.yml  validate.yml
app/: __init__.py  auth.py  config.py  database.py  demo.py  events.py  heartbeat.py  intelligence.py  main.py  migrations.py  models.py  orchestrator.py  pacing.py  policy.py  redaction.py  repositories.py  security.py  trends.py
app/agent/: __init__.py  dispatcher.py  tools.py
app/clients/: apify.py  hiddenlayer.py  nemotron.py
app/migrations/: 001_initial.sql  002_product_records.sql
app/sources/: __init__.py  apify_source.py
app/static/: app.js  index.html  styles.css
docs/platform/: OPERATIONS.md
docs/product/: event-schema.md  security-and-tools.md  storage-and-operations.md
fixtures/: attack_feed.json
frontend/: ASSET_LICENSE.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/src/: TowerScene.ts  api.ts  assets.ts  main.ts  styles.css  types.ts
frontend/tests/: game.spec.ts
infra/: bootstrap_runtime_secrets.py
infra/terraform/: edge.tf  main.tf  observability.tf  (+2 more)
tests/: test_api.py  test_apify_source.py  test_clients.py  test_dispatcher.py  test_live_providers.py  test_migrations.py  test_pacing.py  test_policy.py  test_repository.py  test_security.py  test_spanner_contract.py  test_trends.py
(+5 files in other folders)
